добавлен ендпоинт для получения КИ по ентити и конкретному типу
