# docs/swagger.yaml
@@ -727,6 +727,31 @@ paths:
         name: limit
         required: true
         type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.AllCollectionsDataResponseSwagger'
+      summary: получить КИ по кнтити
+      tags:
+      - collection items
+  /public/collection_item/entity/type:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: entity
+        in: query
+        name: entity
+        required: true
+        type: string
+      - description: limit
+        in: query
+        name: limit
+        required: true
+        type: string
       - description: offset
         in: query
         name: offset
@@ -741,9 +766,13 @@ paths:
         in: query
         name: order
         type: string
-      - description: поиск среди коллекций по тегу
+      - description: поиск среди коллекций по entity
         in: query
         name: search
+        type: string
+      - description: type
+        in: query
+        name: type
         type: string
       produces:
       - application/json
@@ -752,7 +781,7 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/dto.AllCollectionsDataResponseSwagger'
-      summary: получить КИ по кнтити
+      summary: получить КИ по entity и типу
       tags:
       - collection items
   /public/collections:
